welcome.lessons.welcome.array.golomb.Golomb.scala.error
has271:4: error: not found: value &&
    if (nums(i)+5==nums(i+1))&&(((nums(i)-1) >= nums(i+2)-2)&&((nums(i)-1) <= (nums(i+2)+2))){
                             ^